--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 body {
   display: flex;
   justify-content: center;
+  max-width: 1440px;
 }
 
 .main-container {
@@ -29,16 +30,28 @@ body {
 
 header {
   width: 100%;
-  max-width: 1440px;
-  max-height: 79px;
   padding-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 /* ajout des attributs du logo */
 #logo {
   padding: 30px 50px;
   max-width: 100%;
-  max-height: 59.05px;
+  height: 19px;
+}
+
+/* ajout menu */
+
+nav {
+  display: flex;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  gap: 69px;
 }
 
 a {
