--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,28 @@ body {
   max-width: 1440px;
 }
 
+/************ Ajout des balise h1 à h3 ****************/
+
+h1 {
+  font-size: 22px;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+p {
+  font-size: 16px;
+  font-weight: 400;
+}
+
 .main-container {
   width: 100%;
   max-width: 1440px;
@@ -49,15 +71,149 @@ nav {
 }
 
 ul {
+  list-style: none;
+}
+
+.menu-ul {
   display: flex;
-  list-style-type: none;
-  gap: 69px;
+  gap: 68px;
+}
+
+.menu {
+  display: flex;
+  gap: 68px;
+}
+
+/* menu avec survol */
+
+/* CORRIGER LA BORDURE */
+.menu:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 20px;
+  background-color: var(--main-color);
+}
+
+.menu:hover {
+  color: var(--main-color);
 }
 
 a {
   color: inherit;
   text-decoration: none;
 }
+
+/************ Ajout de l'Info Group ****************/
+
+.recherche-filtre {
+  margin: 0px 35px 50px;
+  max-width: 1340px;
+}
+
+.conteneur-headline,
+.conteneur-recherche,
+.conteneur-filtres,
+.conteneur-informations {
+  margin-bottom: 35px;
+}
+
+.search-bar,
+.search-bar button:first-child,
+.search-bar input,
+.search-bar button:last-child {
+  box-sizing: border-box;
+}
+
+.search-bar {
+  display: flex;
+  width: 377px;
+  height: 49px;
+  border-radius: 15px;
+  border: 1px solid var(--main-bg-color);
+  align-items: center;
+  gap: 24px;
+}
+
+.search-bar button:first-child {
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main-bg-color);
+  border-radius: 15px 0 0 15px;
+  border: none;
+  flex-grow: 1;
+  min-width: 50px;
+  height: 49px;
+}
+
+.search-bar input {
+  background-color: white;
+  border: none;
+  color: black;
+  text-align: center;
+  flex-grow: 1;
+  border-radius: 0;
+  min-width: 151px;
+}
+
+input::placeholder {
+  color: black;
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.search-bar button:last-child {
+  background-color: var(--main-color);
+  color: white;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  padding: 15px 16px;
+  border: none;
+  border-radius: 0 15px 15px 0;
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 49px;
+}
+
+.conteneur-filtres {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+
+.boutons-filtre {
+  display: flex;
+  height: 50px;
+  align-items: center;
+  gap: 15px;
+}
+
+.boutons-filtre h3 {
+  margin: 0;
+}
+
+.boutons-filtre button {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 18px;
+  height: 42px;
+  padding: 4px 19px;
+  border-radius: 25px;
+  border: 2px solid var(--filter-bg-color);
+  background-color: #ffff;
+  color: black;
+  cursor: pointer;
+}
+
+/*********** *****************/
 
 .section-title {
   margin: 0;
@@ -100,10 +256,66 @@ a {
   box-sizing: border-box;
 }
 
-/****** Hebergements ***********/
+/****** Hebergements en chantier ***********/
+
 .hebergements {
   width: 65%;
+  float: left;
+  margin-right: 2%;
 }
+
+.hebergements-title,
+.hebergements-cards {
+  margin-bottom: 35px;
+}
+
+.hebergements-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hebergements-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.hebergements-cards .card {
+  box-sizing: border-box;
+  max-width: 250px;
+}
+
+.hebergements-cards img {
+  width: 100%;
+  height: 124px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.hebergements-cards .card-content {
+  width: 100%;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
+
+.afficher-plus {
+  display: inline-block;
+  margin-top: 20px;
+  text-align: left;
+  width: 100%;
+  height: auto;
+  text-decoration: none;
+}
+
+.afficher-plus:hover {
+  text-decoration: none;
+}
+
+/****** Fin Hebergements ***********/
 
 /****** Populaires ***********/
 .populaires {
@@ -148,6 +360,48 @@ a {
 
 .populaires-cards .card-rating {
   margin-bottom: 5px;
+}
+
+/********************* ajout du footer *********************/
+
+footer {
+  background-color: var(--main-bg-color);
+  margin: 50px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-menu {
+  flex: 1;
+  padding: 20px;
+}
+
+.footer-menu:last-child {
+  margin-right: 0;
+}
+
+h2 {
+  margin-bottom: 15px;
+}
+
+.footer-col {
+  padding: 0;
+}
+
+.link-footer {
+  margin-bottom: 15px;
+}
+
+a {
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+a:hover {
+  color: var(--main-color);
 }
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
