--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -11,10 +11,6 @@
     margin: 0;
     padding: 0;
   }
-  header {
-    flex-direction: column;
-    align-items: center;
-  }
 
   /*********************** Header **********************/
 
@@ -289,5 +285,12 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 100%;
+  }
+
+  .link-footer a {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
