--- a/css/style.css
+++ b/css/style.css
@@ -113,8 +113,9 @@ ul {
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: inherit;
+  transition: color 0.3s;
 }
 
 /************ Info Group ****************/
@@ -176,19 +177,19 @@ input::placeholder {
 }
 
 .search-bar button:last-child {
-  background-color: var(--main-color);
-  color: white;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 700;
-  padding: 15px 16px;
-  border: none;
-  border-radius: 0 15px 15px 0;
-  flex-grow: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
   height: 49px;
+  padding: 15px 16px;
+  border: none;
+  border-radius: 0 15px 15px 0;
+  background-color: var(--main-color);
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  font-style: normal;
 }
 
 .search-bar .search-text {
@@ -237,10 +238,6 @@ input::placeholder {
   margin: 0;
 }
 
-.boutons-filtre p {
-  line-height: 1;
-}
-
 .boutons-filtre button:hover {
   background-color: var(--filter-bg-color);
   border: 2px solid var(--grey-tint-2, #d9d9d9);
@@ -272,6 +269,7 @@ input::placeholder {
 
 .card-title {
   font-size: 16px;
+  margin-bottom: 0;
 }
 
 .euro {
@@ -354,6 +352,11 @@ a.cards-prop {
   box-sizing: border-box;
 }
 
+.hebergements-cards .card-title {
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
 .card-content .card-txt {
   margin: 0;
   display: flex;
@@ -364,10 +367,6 @@ a.cards-prop {
 
 .card-content {
   margin: 0;
-}
-
-.card-title {
-  margin-bottom: 0;
 }
 
 .card-content .card-subtitle {
@@ -420,7 +419,6 @@ a.cards-prop {
 
 .populaires-cards .card-title {
   margin-top: 10px;
-  margin-bottom: 4px;
 }
 
 .populaires-cards .card-subtitle {
@@ -496,11 +494,6 @@ footer {
 
 .link-footer {
   margin-bottom: 15px;
-}
-
-a {
-  text-decoration: none;
-  transition: color 0.3s;
 }
 
 a:hover {
